--- a/docker-registry/registry-config/credentials.yml
+++ b/docker-registry/registry-config/credentials.yml
@@ -13,7 +13,7 @@ http:
   addr: :5000
   headers:
     X-Content-Type-Options: [nosniff]
-    Access-Control-Allow-Origin: ['http://docker-hub.vallift.com', 'http://207.180.233.17:5001']
+    Access-Control-Allow-Origin: ['*']
     Access-Control-Allow-Methods: ['HEAD', 'GET', 'OPTIONS', 'DELETE']
     Access-Control-Allow-Headers: ['Authorization', 'Accept']
     Access-Control-Max-Age: [1728000]
